<?xml version="1.0" encoding="utf-8"?><!--
    Copyright (C) 2019-2022 Sweetie Piggy Apps <sweetiepiggyapps@gmail.com>

    This file is part of Bus When? (Twin Cities).

    Bus When? (Twin Cities) is free software; you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation; either version 3 of the License, or
    (at your option) any later version.

    Bus When? (Twin Cities) is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with Bus When? (Twin Cities) ; if not, see <http://www.gnu.org/licenses/>.
-->

<resources>
    <string name="app_name">Bus When? (Twin Cities)</string>

    <string name="stop_number">Stop #</string>
    <string name="stop_id">Stop number?</string>
    <string name="stop_id_hint">for example: 17980</string>
    <string name="enter_stop_id">Enter stop number</string>
    <string name="enter_route">Enter route number</string>
    <string name="must_be_number">Must be a number</string>
    <string name="route">Route number?</string>
    <string name="route_hint">for example: 10</string>
    <string name="real_time">real-time</string>
    <string name="scheduled">scheduled</string>
    <string name="north">north</string>
    <string name="south">south</string>
    <string name="east">east</string>
    <string name="west">west</string>
    <string name="northbound">Northbound</string>
    <string name="southbound">Southbound</string>
    <string name="eastbound">Eastbound</string>
    <string name="westbound">Westbound</string>
    <string name="minutes">min</string>
    <string name="due">Due</string>
    <string name="past_due">Past Due</string>
    <string name="action_about">About</string>
    <string name="action_settings">Settings</string>
    <string name="action_contact">Contact Metro Transit</string>
    <string name="nav_favorites">Favorites</string>
    <string name="nav_search">Search</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_favorite">Favorite</string>
    <!-- <string name="action_search">Search</string> -->
    <!-- <string name="search_stop_id">Search for stop number</string> -->
    <string name="search_stop_id">Show stop</string>
    <string name="show_history">History</string>
    <string name="search_route">Show route</string>
    <string name="browse_routes">Browse routes</string>
    <string name="action_filter">Filter</string>
    <string name="select_route">Select route</string>
    <string name="select_direction">Select direction</string>
    <string name="select_stop">Select stop</string>

    <string name="context_menu_edit">Edit</string>
    <string name="context_menu_remove">Remove</string>
    <string name="context_menu_pin">Pin</string>
    <string name="context_menu_hide">Hide this route</string>

    <string name="edit_stop_name_dialog_title">Edit favorite</string>
    <string name="enter_stop_name_dialog_title">Save as favorite</string>
    <string name="enter_stop_name_dialog_message">Enter a name for this stop</string>
    <string name="select_routes">Select routes to show</string>

    <string name="remove_favorite">Remove favorite?</string>
    <string name="remove">remove</string>
    <string name="clear_search_history">Clear search history?</string>
    <string name="clear">clear</string>

    <string name="dismiss">Dismiss</string>
    <string name="unknown_host">Unable to connect to the internet</string>
    <string name="file_not_found">File not found</string>
    <string name="timed_out">Timed out</string>

    <string name="no_nextrips_found">No upcoming trips</string>
    <string name="no_favorites_found">No favorites here yet</string>
    <string name="no_history_found">No search history</string>

    <string name="main_search_icon_content_description">search for stop number</string>
    <string name="favorite_stop_ids_content_description">favorite stops</string>
    <string name="about_email_icon_content_description">email the app developer</string>
    <string name="reorder_favorites_content_description">reorder favorite stops</string>

    <string name="sweetiepiggyapps">Sweetie Piggy Apps</string>
    <string name="simple_useful">Simple, useful, free and open-source apps for Minnesotans</string>
    <string name="about_us">
    "We develop simple Android apps with the goal of modestly improving the"
    "daily lives of the people in our community.\n\nIf you find this app"
    "useful, please consider supporting us on one or more of the sites below."</string>
    <string name="patreon">Support us on Patreon</string>
    <string name="facebook">Like us on Facebook</string>
    <string name="twitter">Follow us on Twitter</string>
    <string name="github">Get source code on GitHub</string>
    <string name="donate">Buy us a coffee</string>
    <string name="rate">Rate this app on Google\u00A0Play</string>
    <string name="call">Call</string>
    <string name="phone_description">One number to reach all Metro Transit services.</string>
    <string name="text_for_info">Text for Information</string>
    <string name="text_for_info_description">Text general transit questions or trip planning requests, Monday through Friday between 8 AM and 4:30 PM.</string>
    <string name="text_for_safety">Text for Safety</string>
    <string name="text_for_safety_description">If you see something suspicious or inappropriate on a bus or train or at a transit station or stop, Text for Safety to silently report it to Metro Transit. Please include route, bus or train number, location and the issue. If you witness a crime or have an emergency, please call 9-1-1.</string>
    <string name="comment">Comment on Metro Transit Service</string>
    <string name="comment_description">Commend an employee for excellent performance, register a complaint about bus or rail service, locate a lost item or provide a suggestion.</string>
    <string name="comment_button">Comment or Complain</string>
    <string name="social_media">Social Media</string>
    <string name="patreon_content_description">Patreon</string>
    <string name="facebook_content_description">Facebook</string>
    <string name="twitter_content_description">Twitter</string>
    <string name="github_content_description">GitHub</string>
    <string name="donate_content_description">Donate</string>
    <string name="rate_content_description">Google Play</string>
    <string name="license_content_description">GPLv3</string>
    <string name="phone_content_description">Phone</string>

    <string name="license_title">License</string>
    <string name="read_license">Read license</string>
    <string name="license">
      "Copyright (C) 2019-2022 Sweetie Piggy Apps sweetiepiggyapps@gmail.com\n\nBus When? (Twin Cities) is free software; you can redistribute it and/or modify"
      "it under the terms of the GNU General Public License as published by"
      "the Free Software Foundation; either version 3 of the License, or"
      "(at your option) any later version.\n\nBus When? (Twin Cities) is distributed in the hope that it will be useful,"
      "but WITHOUT ANY WARRANTY; without even the implied warranty of"
      "MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the"
      "GNU General Public License for more details.\n\nAdditional permission under GNU GPL version 3 section 7\n\nIf you modify Bus When? (Twin Cities), or any covered work, by linking or combining it"
      "with Google Play services (or a modified version of that library), containing"
      "parts covered by the terms of the respective licensing agreement, the licensors"
      "of Bus When? (Twin Cities) grant you additional permission to convey the resulting work."</string>

    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_stop_search_history">History</string>

    <!-- Preference Titles -->
    <string name="appearance_header">Appearance</string>

    <!-- Appearance Preferences -->
    <string name="nightmode_title">Theme</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="sys_default">Use system default</string>
    <string name="map_always_light_title">Map always light</string>

</resources>
