<!--
    Copyright (C) 2019 Sweetie Piggy Apps <sweetiepiggyapps@gmail.com>

    This file is part of Bus When? (Twin Cities).

    Bus When? (Twin Cities) is free software; you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation; either version 3 of the License, or
    (at your option) any later version.

    Bus When? (Twin Cities) is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with Bus When? (Twin Cities) ; if not, see <http://www.gnu.org/licenses/>.
-->

<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/appearance_header">

        <ListPreference
            app:defaultValue="follow_system"
            app:entries="@array/nightmode_entries"
            app:entryValues="@array/nightmode_values"
            app:key="nightmode"
            app:title="@string/nightmode_title"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreferenceCompat
            app:key="map_always_light"
            app:title="@string/map_always_light_title" />

    </PreferenceCategory>

</PreferenceScreen>
