<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright (C) 2019 Sweetie Piggy Apps <sweetiepiggyapps@gmail.com>

    This file is part of Bus When? (Twin Cities).

    Bus When? (Twin Cities) is free software; you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation; either version 3 of the License, or
    (at your option) any later version.

    Bus When? (Twin Cities) is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with Bus When? (Twin Cities) ; if not, see <http://www.gnu.org/licenses/>.
-->

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".AboutActivity"
    tools:showIn="@layout/activity_about">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical">

    <androidx.cardview.widget.CardView
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:layout_marginLeft="6dp"
	android:layout_marginRight="6dp"
	android:layout_marginTop="6dp"
	android:layout_marginBottom="6dp"
	android:layout_gravity="center_horizontal"
	android:gravity="center"
	app:cardElevation="3dp">
      <LinearLayout
	  android:layout_width="match_parent"
	  android:layout_height="wrap_content"
	  android:orientation="vertical">
	<TextView
            style="?attr/textAppearanceHeadline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/text_margin"
            android:layout_marginEnd="@dimen/text_margin"
            android:layout_marginTop="@dimen/text_margin"
            android:text="@string/simple_useful" />

	<TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?attr/textAppearanceBody1"
	    android:autoLink="web|email"
            android:layout_margin="@dimen/text_margin"
            android:text="@string/about_us" />
      </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:layout_marginLeft="6dp"
	android:layout_marginRight="6dp"
	android:layout_marginTop="6dp"
	android:layout_marginBottom="6dp"
	android:layout_gravity="center_horizontal"
	android:gravity="center"
	app:cardElevation="3dp">
      <LinearLayout
	  android:layout_width="match_parent"
	  android:layout_height="wrap_content"
	  android:orientation="vertical">
	<TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?attr/textAppearanceHeadline5"
            android:layout_marginStart="@dimen/text_margin"
            android:layout_marginEnd="@dimen/text_margin"
            android:layout_marginTop="@dimen/text_margin"
            android:text="@string/license_title" />

	<TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?attr/textAppearanceBody1"
	    android:autoLink="web|email"
            android:layout_margin="@dimen/text_margin"
            android:text="@string/license" />
      </LinearLayout>
    </androidx.cardview.widget.CardView>
  </LinearLayout>
</androidx.core.widget.NestedScrollView>
