<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright (C) 2019-2020 Sweetie Piggy Apps <sweetiepiggyapps@gmail.com>

    This file is part of Bus When? (Twin Cities).

    Bus When? (Twin Cities) is free software; you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation; either version 3 of the License, or
    (at your option) any later version.

    Bus When? (Twin Cities) is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with Bus When? (Twin Cities) ; if not, see <http://www.gnu.org/licenses/>.
-->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:scrollbars="none"
	tools:context=".SearchStopIdFragment">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		app:layout_behavior="@string/appbar_scrolling_view_behavior">

		<androidx.cardview.widget.CardView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
			android:layout_margin="6dp"
			android:gravity="center"
			app:cardElevation="3dp">

			<androidx.constraintlayout.widget.ConstraintLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal"
				android:padding="@dimen/text_margin">

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:ems="38"
					android:gravity="center"
					android:visibility="invisible"
					app:layout_constraintBottom_toBottomOf="parent"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintTop_toTopOf="parent" />

				<com.google.android.material.textfield.TextInputLayout
					android:id="@+id/stopIdTextInput"
					style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:hint="@string/stop_id"
					android:paddingBottom="@dimen/text_margin"
					app:layout_constraintEnd_toEndOf="parent"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintTop_toTopOf="parent">

					<com.google.android.material.textfield.TextInputEditText
						android:id="@+id/stopIdEntry"
						style="@style/Widget.MaterialComponents.AutoCompleteTextView.OutlinedBox"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:completionThreshold="1"
						android:drawablePadding="@dimen/fab_margin"
						android:imeOptions="actionSearch"
						android:inputType="number" />
				</com.google.android.material.textfield.TextInputLayout>

				<Button
					android:id="@+id/stopSearchHistoryButton"
					style="@style/Widget.MaterialComponents.Button.OutlinedButton"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:drawableEnd="@drawable/ic_baseline_history_24"
					android:minHeight="@android:dimen/notification_large_icon_height"
					android:text="@string/show_history"
					app:layout_constraintBottom_toBottomOf="parent"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintTop_toBottomOf="@id/stopIdTextInput" />
				<Button
					android:id="@+id/searchStopIdButton"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_marginStart="@dimen/text_margin"
					android:minHeight="@android:dimen/notification_large_icon_height"
					android:text="@string/search_stop_id"
					app:layout_constraintBottom_toBottomOf="parent"
					app:layout_constraintEnd_toEndOf="parent"
					app:layout_constraintStart_toEndOf="@id/stopSearchHistoryButton"
					app:layout_constraintTop_toBottomOf="@id/stopIdTextInput" />
			</androidx.constraintlayout.widget.ConstraintLayout>
		</androidx.cardview.widget.CardView>

		<androidx.cardview.widget.CardView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
			android:layout_margin="6dp"
			android:gravity="center"
			app:cardElevation="3dp">

			<androidx.constraintlayout.widget.ConstraintLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal"
				android:padding="@dimen/text_margin">

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:ems="38"
					android:gravity="center"
					android:visibility="invisible"
					app:layout_constraintBottom_toBottomOf="parent"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintTop_toTopOf="parent" />

				<com.google.android.material.textfield.TextInputLayout
					android:id="@+id/routeTextInput"
					style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:hint="@string/route"
					android:paddingBottom="@dimen/text_margin"
					app:layout_constraintEnd_toEndOf="parent"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintTop_toTopOf="parent">

					<com.google.android.material.textfield.TextInputEditText
						android:id="@+id/routeEntry"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:drawablePadding="@dimen/fab_margin"
						android:imeOptions="actionSearch"
						android:inputType="number" />
				</com.google.android.material.textfield.TextInputLayout>

				<Button
					android:id="@+id/browseRoutesButton"
					style="@style/Widget.MaterialComponents.Button.OutlinedButton"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:minHeight="@android:dimen/notification_large_icon_height"
					android:text="@string/browse_routes"
					app:layout_constraintBottom_toBottomOf="parent"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintTop_toBottomOf="@id/routeTextInput" />

				<Button
					android:id="@+id/searchRouteButton"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_marginStart="@dimen/text_margin"
					android:minHeight="@android:dimen/notification_large_icon_height"
					android:text="@string/search_route"
					app:layout_constraintBottom_toBottomOf="parent"
					app:layout_constraintEnd_toEndOf="parent"
					app:layout_constraintStart_toEndOf="@id/browseRoutesButton"
					app:layout_constraintTop_toBottomOf="@id/routeTextInput" />
			</androidx.constraintlayout.widget.ConstraintLayout>
		</androidx.cardview.widget.CardView>
	</LinearLayout>
</ScrollView>
